# TagSpec

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d8089ce022e_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  equipment.py  health.py  router.py  workbooks.py
backend/app/core/: config.py  database.py  errors.py  normalization.py  security.py
backend/app/models/: __init__.py  base.py  enums.py  equipment.py  export.py  history.py  tag_row.py  user.py  workbook.py
backend/app/schemas/: auth.py  equipment.py  workbook.py
backend/app/services/: auth_service.py  equipment_service.py  export_service.py  formatter.py  import_service.py  seed.py  tag_service.py  workbook_service.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  helpers.py  test_admin_reset.py  test_auth.py  test_concurrency.py  test_equipment.py  test_export.py  test_formatter.py  test_health.py  test_import.py  test_tag_workflow.py  test_upload.py  workbook_factory.py
docs/: architecture.md  database-model.md  import-and-lifecycle.md  known-limitations.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ApiStatus.tsx  AppHeader.tsx  HealthStatus.tsx  Layout.tsx  MainNavigation.tsx  ProtectedRoute.tsx  (+3 more)
(+21 files in other folders)
